IDE: improved Russian translation

--- a/languages/lazaruside.ru.po
+++ b/languages/lazaruside.ru.po
@@ -5,7 +5,7 @@ msgstr ""
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "POT-Creation-Date: \n"
-"PO-Revision-Date: 2024-10-27 15:57+0300\n"
+"PO-Revision-Date: 2024-10-27 17:04+0300\n"
 "Language-Team: \n"
 "MIME-Version: 1.0\n"
 "X-Poedit-Bookmarks: -1,-1,-1,-1,-1,-1,-1,3325,-1,-1\n"
@@ -13322,7 +13322,7 @@ msgstr ""
 "Отбросить все несохранённые изменения в\n"
 "\"%s\"?\n"
 "\n"
-"Это действие не может быть отменено и затронет все вкладки редакторов с файлом."
+"Это действие не может быть отменено и затронет все вкладки редактора с файлом."
 
 #: lazarusidestrconsts.lismenurun
 msgctxt "lazarusidestrconsts.lismenurun"
