--- a/languages/lazaruside.nl.po
+++ b/languages/lazaruside.nl.po
@@ -11556,11 +11556,13 @@ msgid "Run program"
 msgstr "Run programma"
 
 #: lazarusidestrconsts.liskmsaveall
-msgid "SaveAll"
-msgstr ""
+#, fuzzy
+msgctxt "lazarusidestrconsts.liskmsaveall"
+msgid "Save All"
+msgstr "Alles Opslaan"
 
 #: lazarusidestrconsts.liskmsaveas
-msgid "SaveAs"
+msgid "Save As"
 msgstr ""
 
 #: lazarusidestrconsts.liskmsaveproject
@@ -14902,10 +14904,6 @@ msgstr "Opties"
 #: lazarusidestrconsts.lisoptionvalueignored
 msgid "ignored"
 msgstr ""
-
-#: lazarusidestrconsts.lisor
-msgid "or"
-msgstr "of"
 
 #: lazarusidestrconsts.lisos
 #, object-pascal-format
