--- a/languages/lazaruside.he.po
+++ b/languages/lazaruside.he.po
@@ -11814,11 +11814,16 @@ msgid "Run program"
 msgstr "הרץ תוכנה"
 
 #: lazarusidestrconsts.liskmsaveall
-msgid "SaveAll"
+#, fuzzy
+#| msgid "SaveAll"
+msgctxt "lazarusidestrconsts.liskmsaveall"
+msgid "Save All"
 msgstr "שמור הכל"
 
 #: lazarusidestrconsts.liskmsaveas
-msgid "SaveAs"
+#, fuzzy
+#| msgid "SaveAs"
+msgid "Save As"
 msgstr "שמור כ"
 
 #: lazarusidestrconsts.liskmsaveproject
@@ -15278,10 +15283,6 @@ msgstr "אפשרויות"
 #: lazarusidestrconsts.lisoptionvalueignored
 msgid "ignored"
 msgstr ""
-
-#: lazarusidestrconsts.lisor
-msgid "or"
-msgstr "או"
 
 #: lazarusidestrconsts.lisos
 #, object-pascal-format
