--- a/languages/lazaruside.cs.po
+++ b/languages/lazaruside.cs.po
@@ -10634,7 +10634,7 @@ msgid "IDE build options"
 msgstr "Volby sestavení IDE"
 
 #: lazarusidestrconsts.lisidecaptioncustomhint
-msgid "The caption of the main IDE window"
+msgid "Additional info to display in the IDE title"
 msgstr ""
 
 #: lazarusidestrconsts.lisidecompileandrestart
@@ -10683,15 +10683,13 @@ msgid "Custom IDE title"
 msgstr ""
 
 #: lazarusidestrconsts.lisidetitleoptions
-msgid "IDE main window title"
+msgid "IDE main window and taskbar title"
 msgstr ""
 
-#: lazarusidestrconsts.lisidetitleshowsprojectdir
-msgid "IDE title shows project directory"
-msgstr "Titulek IDE zobrazuje adresář projektu"
-
 #: lazarusidestrconsts.lisidetitlestartswithprojectname
-msgid "IDE title starts with project name"
+#, fuzzy
+#| msgid "IDE title starts with project name"
+msgid "Show custom IDE title before built-in IDE title or info"
 msgstr "Titulek IDE začíná názvem projektu"
 
 #: lazarusidestrconsts.lisiecoallbuildmodes
@@ -16288,10 +16286,6 @@ msgctxt "lazarusidestrconsts.lisprojectdirectory"
 msgid "Project directory"
 msgstr "Adresář projektu"
 
-#: lazarusidestrconsts.lisprojectdirectoryisshowedinidetitlebar
-msgid "Title in taskbar shows also directory path of the project"
-msgstr "Titulek panelu úloh zobrazuje také adresářovou cestu projektu"
-
 #: lazarusidestrconsts.lisprojectfilename
 msgid "Project filename"
 msgstr "Jméno souboru projektu"
@@ -18524,7 +18518,7 @@ msgstr "&Titulek"
 #: lazarusidestrconsts.listitleintaskbarshowsforexampleproject1lpilazarus
 #, fuzzy
 #| msgid "Title in taskbar shows for example: project1.lpi - Lazarus"
-msgid "Title in taskbar shows for example: project1 - Lazarus"
+msgid "Show the custom IDE title before the IDE's name and other info in the title. Example: project1 - Lazarus."
 msgstr "Titulek v panelu úloh zobrazí například: projekt1.lpi - Lazarus"
 
 #: lazarusidestrconsts.listitleleaveemptyfordefault
