--- a/languages/lazaruside.ja.po
+++ b/languages/lazaruside.ja.po
@@ -10708,7 +10708,7 @@ msgid "IDE build options"
 msgstr "IDE 構築オプション"
 
 #: lazarusidestrconsts.lisidecaptioncustomhint
-msgid "The caption of the main IDE window"
+msgid "Additional info to display in the IDE title"
 msgstr ""
 
 #: lazarusidestrconsts.lisidecompileandrestart
@@ -10758,15 +10758,13 @@ msgid "Custom IDE title"
 msgstr ""
 
 #: lazarusidestrconsts.lisidetitleoptions
-msgid "IDE main window title"
+msgid "IDE main window and taskbar title"
 msgstr ""
 
-#: lazarusidestrconsts.lisidetitleshowsprojectdir
-msgid "IDE title shows project directory"
-msgstr "IDEがプロジェクトディレクトリを表示"
-
 #: lazarusidestrconsts.lisidetitlestartswithprojectname
-msgid "IDE title starts with project name"
+#, fuzzy
+#| msgid "IDE title starts with project name"
+msgid "Show custom IDE title before built-in IDE title or info"
 msgstr "IDEのタイトルはプロジェクト名で始める"
 
 #: lazarusidestrconsts.lisiecoallbuildmodes
@@ -16383,10 +16381,6 @@ msgctxt "lazarusidestrconsts.lisprojectdirectory"
 msgid "Project directory"
 msgstr "プロジェクトディレクトリ"
 
-#: lazarusidestrconsts.lisprojectdirectoryisshowedinidetitlebar
-msgid "Title in taskbar shows also directory path of the project"
-msgstr "タスクバー上のタイトルはプロジェクトのディレクトリパスも表示します"
-
 #: lazarusidestrconsts.lisprojectfilename
 msgid "Project filename"
 msgstr "プロジェクトファイル名"
@@ -18655,7 +18649,7 @@ msgstr "タイトル(&T)"
 #: lazarusidestrconsts.listitleintaskbarshowsforexampleproject1lpilazarus
 #, fuzzy
 #| msgid "Title in taskbar shows for example: project1.lpi - Lazarus"
-msgid "Title in taskbar shows for example: project1 - Lazarus"
+msgid "Show the custom IDE title before the IDE's name and other info in the title. Example: project1 - Lazarus."
 msgstr "タスクバーのタイトルはproject1.lpi - Lazarusなどと表示します。"
 
 #: lazarusidestrconsts.listitleleaveemptyfordefault
